--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="app">
       <h1>Todo</h1>
         <section>
-          <label for="todo-input">Add to your todo list!</label>
+          <label class ="to"  for="todo-input">Add to your todo list!</label>
           <input class="todo-input "type="text" name="todo-input">
           <label for="priority">Priority:</label>
           <select class="priority" name="priority">
@@ -32,9 +32,11 @@
     <script src="./back-end.js"></script>
     <script src="./todos.js"></script>
     <script src="./add-todo.js"></script>
+    <script src="./addbutton.js"></script>
     <script src="./remove-todo.js"></script>
     <script src="./print-todo.js"></script>
     <script src="./print-todos.js"></script>
+    <script src="./hide-complete-button.js"></script>
     <script src="./clear-todos.js"></script>
     <script src="./refresh-todos.js"></script>
     <script src="./add-button-controller.js"></script>
